Overflow and margin fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,10 @@
       url('/layouts/fonts/MyriadProRegular.ttf') format('truetype'),
       url('/layouts/fonts/MyriadProRegular.svg#MyriadProRegular') format('svg');
 }
+.espresso-theme {
+    overflow:hidden;
+}
+
 .espress-img {
     max-width: 100%;
     width: 2000px;
@@ -75,7 +79,7 @@
 .filter-img {
     position:relative;
     float: right;
-    margin-top: -56px;
+    margin-top: -54px;
 }
 .filter-styles {
     color: #000;
